# maya

./: .clangd  .gitignore  CMakeLists.txt  GEMINI.md  README.md
.github/workflows/: ci.yml
docs/: GETTING_STARTED.md
examples/: CMakeLists.txt
include/maya/ai/: ai.hpp
include/maya/core/: application.hpp  camera.hpp  engine.hpp  file_system.hpp  material.hpp  mesh.hpp  model_loader.hpp  primitives.hpp  scene.hpp  scene_draw_uniforms.hpp  texture.hpp
include/maya/math/: math_utils.hpp  matrix.hpp  quaternion.hpp  types.hpp  vector.hpp
include/maya/physics/: physics.hpp
include/maya/platform/: input.hpp  window.hpp
include/maya/renderer/: renderer.hpp
include/maya/rhi/: graphics_device.hpp  resource.hpp  vertex.hpp
include/maya/rhi/metal/: metal_device.hpp
resources/shaders/metal/: triangle.metal
src/: CMakeLists.txt  main.cpp
src/maya/ai/: ai.cpp
src/maya/core/: application.cpp  camera.cpp  engine.cpp  file_system.cpp  model_loader.cpp  primitives.cpp  scene.cpp
src/maya/math/: matrix.cpp  quaternion.cpp  vector.cpp
src/maya/physics/: physics.cpp
src/maya/platform/: input.cpp  window.cpp
src/maya/renderer/: renderer.cpp
src/maya/rhi/metal/: metal_device.mm  triangle.metal
tests/: CMakeLists.txt  camera_extended_tests.cpp  camera_tests.cpp  input_tests.cpp  math_tests.cpp  math_utils_tests.cpp  matrix_tests.cpp  mesh_tests.cpp  model_loader_tests.cpp  quaternion_tests.cpp  rhi_tests.cpp  texture_tests.cpp  vector_tests.cpp  vertex_tests.cpp
